# corewar

./: 1.cor  2.cor  3.cor  CMakeLists.txt  MONSTER.s  Makefile  a.out  asm  byte.c  corewar  f  fin  fin_mortel  fin_slider2  finish  lol.cor  m  make  my  my_2  o  op.c  or  orig  orig_1  orig_2  orig_3  pikachu.s  r  res1  res2  rrr  script  t  tt
.objs/: arena.d  args.d  color.d  commands.d  commands2.d  cur.d  cursor.d  fork.d  init2.d  init_champion.d  ld_other.d  main.d  op_action.d  op_tab.d  print.d  war.d
a.out.dSYM/Contents/Resources/DWARF/: a.out
asm/: assembly.c  assembly_2.c  check_commands.c  check_commands_3.c  create_file.c  errors.c  errors_three.c  errors_two.c  free.c  list_functions.c  parse.c  utils.c  utils2.c  utils_write.c  validation.c  validation_utils.c  write_arguments.c  write_commands.c
asm_2/: assembly.c  errors.c  free.c  validation.c
asm_src/: Makefile  asm  asm.c  assembly.c  check_commands.c  check_commands_2.c  create_file.c  errors_three.c  list_functions.c  more_validation.c  parse.c  utils.c  utils2.c  validate_labels.c  validation.c  validation_utils.c  write_commands.c
asm_src/.objs/: asm.d  assembly.d  assembly_2.d  check_commands.d  check_commands_2.d  check_commands_3.d  create_file.d  errors.d  errors_three.d  errors_two.d  free.d  list_functions.d  parse.d  utils.d  utils2.d  utils_write.d  validation.d  validation_utils.d  write_arguments.d  write_commands.d
champs/championships/2017/pzarmehr/: overwatch.s
champs/examples/: helltrain.cor
corewar.dSYM/Contents/Resources/DWARF/: corewar
corewar_wstygg/: CMakeLists.txt  Makefile  author  corewar  make  op.c  res1  res2  script
corewar_wstygg/asm/: a.out  asm.c
corewar_wstygg/includes/: asm.h  op.h  vm.h
corewar_wstygg/vm/: arena.c  args.c  commands.c  commands2.c  commands3.c  cur.c  cursor.c  get_arg.c  init2.c  init_champion.c  main.c  op_action.c  op_tab.c  print.c  war.c
corewar_wstygg/vm/op/: add.c  live.c
corewar_wstygg/vm_champs/: asd  batman.s  h.c
includes/: asm.h  op.h  vm.h
libft/: Makefile  ft_strchr.c  libft.h
libft/.objs/: ft_atoi.d  ft_isalpha.d  ft_isascii.d  ft_isdigit.d  ft_isprint.d  ft_memalloc.d  ft_putchar.d  ft_putendl.d  ft_putnbr.d  ft_putstr.d  ft_str_is_alpha.d  ft_str_is_numeric.d  ft_strcapitalize.d  ft_strcat.d  ft_strclr.d  ft_strcmp.d  ft_strcpy.d  ft_strdel.d  ft_strequ.d  ft_striter.d  ft_striteri.d  ft_strlowcase.d  ft_strmap.d  ft_strncat.d  ft_strncpy.d  ft_strnequ.d  ft_strnew.d  ft_strsplit.d  ft_strstr.d  ft_strsub.d  ft_strupcase.d  ft_tolower.d  ft_toupper.d
libft/.objs/ft_printf/: assoc.d  delete.d  float.d  ft_arg_di.d  ft_arg_f.d  ft_arg_o.d  ft_arg_xx.d  ft_itoa_u.d  ft_printf.d  func_str.d  parse.d  print_c.d  print_di.d  print_f.d  print_o.d  print_p.d  print_perc.d  print_s.d  print_u.d  print_xx.d  treatment.d
vm/: a.out  arena.c  args.c  args2.c  color.c  commands.c  commands2.c  cur.c  cursor.c  error.c  fork.c  get_arg.c  init2.c  init_champion.c  ld_other.c  main.c  op.c  op_action.c  operation.c  print.c  print_helper.c  vm.h  war.c
vm/op/: add.c  live.c
(+1 files in other folders)
