cmake_minimum_required(VERSION 3.15)
project(CORE C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)
include_directories(libft/ft_printf)

set(CMAKE_CXX_FLAGS "-lncurses")

add_executable(CORE
        includes/op.h
        includes/vm.h
        libft/ft_printf/assoc.c
        libft/ft_printf/delete.c
        libft/ft_printf/float.c
        libft/ft_printf/ft_arg_di.c
        libft/ft_printf/ft_arg_f.c
        libft/ft_printf/ft_arg_o.c
        libft/ft_printf/ft_arg_xx.c
        libft/ft_printf/ft_itoa_u.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/ft_printf.h
        libft/ft_printf/parse.c
        libft/ft_printf/print_c.c
        libft/ft_printf/print_di.c
        libft/ft_printf/print_f.c
        libft/ft_printf/print_o.c
        libft/ft_printf/print_p.c
        libft/ft_printf/print_perc.c
        libft/ft_printf/print_s.c
        libft/ft_printf/print_u.c
        libft/ft_printf/print_xx.c
        libft/ft_printf/treatment.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_str_is_alpha.c
        libft/ft_str_is_numeric.c
        libft/ft_strcapitalize.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strlowcase.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_strupcase.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        vm/arena.c
        vm/args.c
        vm/commands.c
        vm/commands2.c
        vm/cur.c
        vm/cursor.c
        vm/fork.c
        vm/init2.c
        vm/init_champion.c
        vm/ld_other.c
        vm/main.c
        vm/color.c
        vm/commands3.c
        vm/op_action.c
        vm/op_tab.c
        vm/print.c
        vm/print_helper.c
        vm/war.c)

target_link_libraries(CORE ncurses)
